# coppermind

./: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json.tmp  tsconfig.json  vite.config.ts  widget.html
migrations/: recurring_to_monthly.sql
src/: App.tsx  index.css  main.tsx  widget.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.widget.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_chrono.rs
src-tauri/icons/: icon.icns
src-tauri/src/: books.rs  briefing_aggregates.rs  briefing_monthly.rs  briefing_yearly.rs  cf_friends_system.rs  cf_ladder_system.rs  cf_recommendations.rs  context_engine.rs  daily_briefing.rs  date_summary.rs  debt_system.rs  knowledge_base.rs  knowledge_base_commands.rs  lib.rs  milestones.rs  monthly_goals.rs  reflection.rs  retrospectives.rs  unified_goals.rs
src-tauri/src/cf_ladder_system/: cf_bulk_operations.rs  cf_category_commands.rs  cf_ladder_commands.rs  cf_ladder_parser.rs  cf_ladder_types.rs  mod.rs
src-tauri/src/cross_references/: commands.rs  mod.rs  models.rs  registry.rs  resolver.rs  resolver_cache.rs
src-tauri/src/pos/: activities.rs  config.rs  db.rs  error.rs  github.rs  goals.rs  mod.rs  models.rs  retry.rs  scraper.rs  shadow.rs  submissions.rs  utils.rs
src-tauri/src/pos/scrapers/: codeforces.rs  github.rs  leetcode.rs  mod.rs
src-tauri/src/pos/scrapers/github/: db.rs  fetcher.rs  mod.rs  types.rs
src/components/: CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DatePicker.tsx  DragHandle.tsx  Editor.tsx  (+12 more)
(+168 files in other folders)
