[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite", "postgres"] }
tauri-plugin-log = "2"

# Low-level keyboard input for double-shift detection
rdev = { version = "0.5", features = ["unstable_grab"] }

# PRIMARY selection reading (highlighted text, not clipboard)
wl-clipboard-rs = "0.9"   # Wayland (Hyprland)
x11-clipboard = "0.9"     # X11/XWayland fallback
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.5"

# ─── POS Integration ─────────────────────────────────────
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
